--- a/app/src/main/res/layout/lay_principal_fragment.xml
+++ b/app/src/main/res/layout/lay_principal_fragment.xml
@@ -18,6 +18,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="?android:attr/windowBackground"
-            app:menu="@menu/menu_principal" />
+            android:background="?android:attr/windowBackground"/>
 </LinearLayout>
