--- a/app/src/main/res/layout/lay_detail_fragment.xml
+++ b/app/src/main/res/layout/lay_detail_fragment.xml
@@ -1,4 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                             android:layout_height="match_parent"/>
+<android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#282727"
+    >
+
+        <TextView
+                android:text="@string/app_genero"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lblGenero" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="32dp"
+                android:textColor="#9e4f60"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
+
+        <TextView
+                android:text="@string/app_genero"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+                android:text="@string/app_planeta_natal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/lblGenero"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
+
+        <TextView
+                android:text="@string/app_cor_pele"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/lblPlanetaNatal"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
+
+        <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#40AAAAAA"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lblCorPele"
+                android:id="@+id/view" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+
+        <TextView
+                android:text="@string/app_veiculos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/view"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:layout_marginTop="8dp"/>
+        <TextView
+                android:text="@string/app_planeta_natal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lblPlanetaNatal" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="32dp"
+                android:textColor="#9e4f60"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView7"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
+        <TextView
+                android:text="@string/app_cor_pele"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lblCorPele" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView8"
+                android:textColor="#9e4f60"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" android:layout_marginTop="8dp"/>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rcvListaVeiculos"
+                android:layout_width="395dp"
+                android:layout_height="wrap_content" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"/>
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_icon_1"
+                tools:layout_editor_absoluteY="561dp"
+                android:id="@+id/imgNave" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
+
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:background="#282727"
+            app:srcCompat="@drawable/ic_icon_1" app:backgroundTint="#282727"/>
+</android.support.design.widget.CoordinatorLayout>
+
