--- a/app/src/main/res/layout/lay_detail_fragment.xml
+++ b/app/src/main/res/layout/lay_detail_fragment.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <android.support.constraint.ConstraintLayout
+        android:layout_height="match_parent"
+        android:background="#282727"
+>
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#282727"
@@ -89,25 +91,18 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView8"
                 android:textColor="#9e4f60"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" android:layout_marginTop="8dp"/>
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvListaVeiculos"
                 android:layout_width="395dp"
                 android:layout_height="wrap_content" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginEnd="16dp"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"/>
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_icon_1"
-                tools:layout_editor_absoluteY="561dp"
-                android:id="@+id/imgNave" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"/>
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -115,5 +110,5 @@
             android:layout_margin="@dimen/fab_margin"
             android:background="#282727"
             app:srcCompat="@drawable/ic_icon_1" app:backgroundTint="#282727"/>
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
