--- a/app/src/main/res/layout/lay_home_adapter.xml
+++ b/app/src/main/res/layout/lay_home_adapter.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/content"
+        android:background="#282727"
     >
     <TextView
             android:id="@+id/lblName"
@@ -15,6 +16,7 @@
             android:layout_marginTop="16dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
             android:textAllCaps="true"
+            android:textColor="@android:color/white"
     />
     <TextView
             android:id="@+id/lblEspecie"
@@ -25,7 +27,9 @@
             android:layout_marginStart="16dp"
             android:textAllCaps="false"
             app:layout_constraintTop_toBottomOf="@+id/lblName" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            android:textColor="#9e4f60"
+    />
     <TextView
             android:id="@+id/lblVehicles"
             android:text="@string/app_vehicles"
@@ -35,5 +39,7 @@
             android:layout_marginStart="16dp"
             android:textAllCaps="false" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/lblEspecie" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
-</android.support.constraint.ConstraintLayout>
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
+            android:textColor="#9e4f60"
+    />
+</androidx.constraintlayout.widget.ConstraintLayout>
