--- a/app/src/main/res/layout/lay_principal_activity.xml
+++ b/app/src/main/res/layout/lay_principal_activity.xml
@@ -3,10 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+              android:background="#282727"
 >
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#282727"
+    >
     </FrameLayout>
 </LinearLayout>
