--- a/app/src/main/res/layout/lay_detail_fragment.xml
+++ b/app/src/main/res/layout/lay_detail_fragment.xml
@@ -6,13 +6,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#282727"
->
+        android:id="@+id/coordinatorLayout">
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#282727"
     >
 
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rcvListaVeiculos"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
+        <TextView
+                android:text="@string/app_filmes"
+                android:layout_width="wrap_content"
+                android:layout_height="19dp"
+                android:id="@+id/textView9"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                tools:layout_editor_absoluteX="16dp"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rcvListaVeiculos"/>
+        <TextView
+                android:text="@string/app_veiculos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/lblCorPele"/>
         <TextView
                 android:text="@string/app_genero"
                 android:layout_width="wrap_content"
@@ -55,24 +83,6 @@
                 android:textColor="@android:color/white"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
 
-        <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#40AAAAAA"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lblCorPele"
-                android:id="@+id/view" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-
-        <TextView
-                android:text="@string/app_veiculos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/view"
-                android:textAllCaps="true"
-                android:textColor="@android:color/white"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:layout_marginTop="8dp"/>
         <TextView
                 android:text="@string/app_planeta_natal"
                 android:layout_width="wrap_content"
@@ -92,12 +102,12 @@
                 android:textColor="#9e4f60"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" android:layout_marginTop="8dp"/>
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rcvListaVeiculos"
-                android:layout_width="395dp"
-                android:layout_height="wrap_content" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView12" android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.0"/>
+                android:layout_width="0dp"
+                android:layout_height="260dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
